<resources>
    <string name="app_name">Calculator with navigation drawer</string>
    <string name="operation_btn_all_clear">ac</string>
    <string name="operation_btn_plus_minus">+/-</string>
    <string name="operation_btn_percent">%</string>
    <string name="operation_btn_division">/</string>
    <string name="operation_btn_multiplication">x</string>
    <string name="operation_btn_subtraction">-</string>
    <string name="operation_btn_addition">+</string>
    <string name="operation_btn_equals">=</string>
    <string name="operation_btn_floating_point">.</string>
    <string name="number_button_0">0</string>
    <string name="number_button_1">1</string>
    <string name="number_button_2">2</string>
    <string name="number_button_3">3</string>
    <string name="number_button_4">4</string>
    <string name="number_button_5">5</string>
    <string name="number_button_6">6</string>
    <string name="number_button_7">7</string>
    <string name="number_button_8">8</string>
    <string name="number_button_9">9</string>
    <string name="number_button_enter">Sent Result</string>
    <string name="menu_account">Account</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_confidentiality">Confidentiality</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Killua</string>
    <string name="nav_header_subtitle">Android - Developer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_second2">SecondActivity2</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_second">SecondActivity</string>
</resources>