<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_enter"
            android:onClick="onNumberClick"
            android:layout_gravity="center"
            app:cornerRadius="30dp"
            android:textSize="22sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:backgroundTint="@color/orange"
            android:visibility="invisible"
            android:text="@string/number_button_enter"
            />


        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="80sp"
            android:textColor="@color/white"
            android:text="@string/number_button_0"
            android:layout_gravity="end|bottom"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginEnd="34dp"/>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/container"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="center"
            android:paddingVertical="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_all_clear"
                android:onClick="onNumberClick"
                android:textSize="22sp"
                style="@style/Grey.Button"
                android:text="@string/operation_btn_all_clear"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_plus_minus"
                android:onClick="onOperationClick"
                android:textSize="22sp"
                android:layout_marginHorizontal="18dp"
                style="@style/Grey.Button"
                android:text="@string/operation_btn_plus_minus"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_percent"
                android:onClick="onOperationClick"
                android:textSize="36sp"
                style="@style/Grey.Button"
                android:layout_marginEnd="18dp"
                android:text="@string/operation_btn_percent"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_division"
                android:onClick="onOperationClick"
                style="@style/Orange.Button"
                android:text="@string/operation_btn_division" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:paddingVertical="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_seven"
                android:onClick="onNumberClick"
                style="@style/Dark.Grey.Button"
                android:text="@string/number_button_7"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_eight"
                android:onClick="onNumberClick"
                android:layout_marginHorizontal="18dp"
                style="@style/Dark.Grey.Button"
                android:text="@string/number_button_8"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_nine"
                android:onClick="onNumberClick"
                style="@style/Dark.Grey.Button"
                android:layout_marginEnd="18dp"
                android:text="@string/number_button_9"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_multiplication"
                android:onClick="onOperationClick"
                android:textSize="28sp"
                style="@style/Orange.Button"
                android:text="@string/operation_btn_multiplication" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:paddingVertical="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_four"
                style="@style/Dark.Grey.Button"
                android:onClick="onNumberClick"
                android:text="@string/number_button_4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_five"
                android:onClick="onNumberClick"
                android:layout_marginHorizontal="18dp"
                style="@style/Dark.Grey.Button"
                android:text="@string/number_button_5"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_six"
                android:onClick="onNumberClick"
                style="@style/Dark.Grey.Button"
                android:layout_marginEnd="18dp"
                android:text="@string/number_button_6"
                />

            <com.google.android.material.button.MaterialButton
                android:onClick="onOperationClick"
                android:id="@+id/btn_subtraction"
                style="@style/Orange.Button"
                android:text="@string/operation_btn_subtraction" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:paddingVertical="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_one"
                android:onClick="onNumberClick"
                style="@style/Dark.Grey.Button"
                android:text="@string/number_button_1"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_two"
                android:onClick="onNumberClick"
                android:layout_marginHorizontal="18dp"
                style="@style/Dark.Grey.Button"
                android:text="@string/number_button_2"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_three"
                android:onClick="onNumberClick"
                style="@style/Dark.Grey.Button"
                android:layout_marginEnd="18dp"
                android:text="@string/number_button_3"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_addition"
                android:onClick="onOperationClick"
                style="@style/Orange.Button"
                android:text="@string/operation_btn_addition" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:paddingVertical="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_zero"
                android:onClick="onNumberClick"
                android:textAlignment="textStart"
                android:paddingStart="32dp"
                android:layout_width="178dp"
                android:layout_marginEnd="18dp"
                style="@style/Dark.Grey.Button"
                android:text="@string/number_button_0"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_floating_point"
                android:onClick="onOperationClick"
                style="@style/Dark.Grey.Button"
                android:layout_marginEnd="18dp"
                android:text="@string/operation_btn_floating_point"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_equal"
                android:onClick="onOperationClick"
                style="@style/Orange.Button"
                android:text="@string/operation_btn_equals" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>